--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,111 @@ body {
     font-family: 'Nunito', sans-serif;
     margin: 0;
 }
+
+main {
+    flex: 1;
+}
+
+main,
+ul,
+ol,
+li {
+    margin: 0;
+}
+
+main,
+footer {
+    box-sizing: border-box;
+    max-width: 50%;
+    width: 100%;
+    margin: 0 auto;
+}
+
+footer ul,
+footer li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+h1 {
+    padding-left: 16px;
+}
+
+.container {
+    background-color: #f5f5f5;
+    min-height: 100vh;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.inputs {
+    display: flex;
+    gap: 8px;
+}
+
+.from {
+    display: flex;
+    justify-content: space-between;
+}
+
+.from button {
+    border: solid 1px black;
+    border-radius: 4px;
+    padding: 4px 8px;
+    background-color: white;
+}
+
+.from .inputs {
+    padding-left: 16px;
+}
+
+.result {
+    margin-top: 32px;
+    padding: 8px 16px 16px;
+    border: solid 2px black;
+    border-radius: 12px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    background-color: white;
+}
+
+.result .title {
+    text-transform: uppercase;
+    font-size: 0.7rem;
+}
+
+input {
+    font-size: 16px;
+    padding: 4px;
+    border-radius: 4px;
+    border: solid 1px black;
+}
+
+@media (max-width: 887px) {
+    main,
+    footer {
+        max-width: 100%;
+        margin: 0 16px;
+        width: initial;
+    }
+
+    .from {
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    h1,
+    .from .inputs {
+        padding-left: 0;
+    }
+
+    input {
+        width: 125px;
+    }
+}
