--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
+:root {
+    --border-radius--default: 12px;
+    --border-radius--tight: 4px;
+}
+
 body {
     font-family: 'Nunito', sans-serif;
     margin: 0;
@@ -56,7 +61,7 @@ h1 {
 
 .from button {
     border: solid 1px black;
-    border-radius: 4px;
+    border-radius: var(--border-radius--tight);
     padding: 4px 8px;
     background-color: white;
 }
@@ -69,7 +74,7 @@ h1 {
     margin-top: 32px;
     padding: 8px 16px 16px;
     border: solid 2px black;
-    border-radius: 12px;
+    border-radius: var(--border-radius--default);
 
     display: flex;
     flex-direction: column;
@@ -86,7 +91,7 @@ h1 {
 input {
     font-size: 16px;
     padding: 4px;
-    border-radius: 4px;
+    border-radius: var(--border-radius--tight);
     border: solid 1px black;
 }
 
@@ -108,7 +113,7 @@ input {
         padding-left: 0;
     }
 
-    input {
+    .inputs > input {
         width: 125px;
     }
 }
